projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/zlib_compress_rejects_str_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "zlib_compress_rejects_str_argument"
# subject = "zlib.compress"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""zlib.compress: zlib_compress_rejects_str_argument (errors)."""
import zlib

try:
    result = zlib.compress("abc")
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
